Fixed the images being cut off in the slider. They now maintain aspect ratio and scale to the container (which is set in the app.scss file to 30vh- so it scales to the height of the device screen)

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -300,3 +300,31 @@ ion-list.toggle-section .toggle-section-content {
 .phone-number ion-col ion-item {
   padding-left: 6px;
 }
+
+.homeslider{
+	width:100%; 
+	height:30vh;
+	
+	div{
+		max-height: 30vh;
+		width: 100%;
+	}
+	
+	img{
+		object-fit:contain !important;
+		max-height: 30vh !important;	
+	}
+	
+	
+}
+/*
+div.slide{
+	
+}
+
+ion-slide img{
+
+
+
+}
+*/
